updated backend with trip and booking fixes